# Necerini_LabProgrammazione

./: CMakeLists.txt  Item.cpp  Item.h  Observer.cpp  Observer.h  README.md  ShoppingList.cpp  ShoppingList.h  Subject.cpp  Subject.h  User.cpp  User.h  main.cpp
Test/: CMakeLists.txt  ItemTest.cpp  ObserverTest.cpp  ShoppingListFixture.cpp  UserFixture.cpp  runAllTests.cpp
